# QA-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.ipynb
app/: config.py  document_processing.py  main.py  models.py  router.py  utils.py  vectorstore.py
